openstack-operator/kustomize/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openstack-operator
  labels:
    app.kubernetes.io/name: openstack-operator
    app.kubernetes.io/component: operator
spec:
  selector:
    app.kubernetes.io/name: openstack-operator
  ports:
    - name: health
      port: 8080
      targetPort: health
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP
